--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,9 +3,11 @@ stages:
 
 pages:
     stage: deploy
-    image: node:lts
+    image: alpine:latest
     script:
+        - apk add nodejs brotli
         - node generate-index.js
+        - node generate-brotli.js
         - mkdir .public
         - cp -r * .public
         - mv .public public
