--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ push to s3:
         # AWS_ACCESS_KEY_ID
         # AWS_SECRET_ACCESS_KEY
     script:
-        - apk add nodejs rclone
+        - apk add nodejs rclone aws-cli
 
         - node generate-index.js
         # - node generate-brotli.js
