--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,12 @@ push to s3:
     variables:
         S3_BUCKET: tivolicloud-things
         S3_REGION: us-east-1
-        CLOUDFRONT_ID: E3UZ30F1ITWQYT
+        # CLOUDFRONT_ID: E3UZ30F1ITWQYT
         # AWS_ACCESS_KEY_ID
         # AWS_SECRET_ACCESS_KEY
     script:
-        - apk add nodejs rclone aws-cli
+        # - apk add nodejs rclone aws-cli
+        - apk add nodejs rclone
 
         - node generate-index.js
         # - node generate-brotli.js
@@ -35,8 +36,8 @@ push to s3:
 
         - rclone sync -P . s3:$S3_BUCKET
 
-        # invalidate cloudfront
-        - aws configure set region $S3_REGION
-        - aws cloudfront create-invalidation
-          --distribution-id $CLOUDFRONT_ID
-          --paths "/index.json"
+        # # invalidate cloudfront
+        # - aws configure set region $S3_REGION
+        # - aws cloudfront create-invalidation
+        #   --distribution-id $CLOUDFRONT_ID
+        #   --paths "/index.json"
